fixed datepicker z-index bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ header {
   border-radius: 38px;
   margin: 1%;
   background-color: var(--dark-color);
+  z-index: 0;
 }
 
 body, html {
@@ -203,6 +204,7 @@ aside ul li {
 @media screen and (max-width: 992px) {
   #toggle-container {
     flex-direction: column;
+    align-content: center;
   }
   button#fav-toggle,
   button#res-toggle {
